--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
 
                         <address class="contacts">
                             <ul class="contacts-list">
-                                <li><a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a>
+                                <li class="contacts-item"><a href="mailto:info@devstudio.com"
+                                        class="contacts-item">info@devstudio.com</a>
                                 </li>
-                                <li><a href="tel:+110001111111" class="contacts-item">+11 (000) 111-11-11</a></li>
+                                <li class="contacts-item"><a href="tel:+110001111111" class="contacts-item">+11
+                                        (000) 111-11-11</a></li>
                             </ul>
                         </address>
 
@@ -400,47 +402,51 @@
 
     <footer class="footer ">
         <div class="container footer-section">
-            <div class="footer-branding">
-                <a class="logo-footer logo" href="./index.html">
-                    Web<span class="footer-studio">Studio</span>
-                </a>
-                <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital
-                    marketing &
-                    growth solutions.</p>
+
+            <div class="footer-content-table">
+                <div class="footer-branding">
+                    <a class="logo-footer logo" href="./index.html">
+                        Web<span class="footer-studio">Studio</span>
+                    </a>
+                    <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital
+                        marketing &
+                        growth solutions.</p>
+                </div>
+                <div class="socials-section">
+                    <p class="socials-text">Social media</p>
+                    <ul class="footer-list">
+                        <li class="footer-icon">
+                            <a href="https://www.instagram.com/" class="footer-icons-link">
+                                <svg class="footer-icon-item" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icon">
+                            <a href="https://www.facebook.com/" class="footer-icons-link">
+                                <svg class="footer-icon-item" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icon">
+                            <a href="https://x.com/" class="footer-icons-link">
+                                <svg class="footer-icon-item" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icon">
+                            <a href="https://www.linkedin.com/" class="footer-icons-link">
+                                <svg class="footer-icon-item" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="socials-section">
-                <p class="socials-text">Social media</p>
-                <ul class="footer-list">
-                    <li class="footer-icon">
-                        <a href="https://www.instagram.com/" class="footer-icons-link">
-                            <svg class="footer-icon-item" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-icon">
-                        <a href="https://www.facebook.com/" class="footer-icons-link">
-                            <svg class="footer-icon-item" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-icon">
-                        <a href="https://x.com/" class="footer-icons-link">
-                            <svg class="footer-icon-item" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-icon">
-                        <a href="https://www.linkedin.com/" class="footer-icons-link">
-                            <svg class="footer-icon-item" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+
             <div class="subscribe-section">
                 <p class="subscribe-title">Subscribe</p>
                 <form class="subscribe-form">
