add initial files

--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
                                     </svg>
                                 </a>
                             </li>
+                        </ul>
                     </div>
-
-
                 </div>
             </nav>
 
@@ -243,8 +242,8 @@
                     </li>
                     <li class="team-list-item">
                         <img src="./images/camila-garcia.jpg" class="img-team"
-                            srcset="./images/camila-garcia.jpg 1x, ./images/camila-garcia.jpg 2x" srcset="./images/ 1x"
-                            alt="camila-garcia" width="264">
+                            srcset="./images/camila-garcia.jpg 1x, ./images/camila-garcia.jpg 2x" alt="camila-garcia"
+                            width="264">
                         <div class="team-list-conteiner">
                             <h3 class="team-name">Camila Garcia</h3>
                             <p class="team-position">Marketing</p>
