add initial files

--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-list-image">
-                            <img src="./images/banking-app.jpg" alt="banking-app" width="360">
+                            <img src="./images/banking-app.jpg"
+                                srcset="./images/banking-app.jpg x1, ./images/banking-app.jpg x2" alt="banking-app"
+                                width="360">
                             <p class="portfolio-list-paragraph">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -341,7 +343,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-list-image">
-                            <img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360">
+                            <img src="./images/cashless-payment.jpg"
+                                srcset="./images/cashless-payment.jpg x1, ./images/cashless-payment.jpg x2"
+                                alt="cashless-payment" width="360">
                             <p class="portfolio-list-paragraph">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -352,7 +356,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-list-image">
-                            <img src="./images/meditation-app.jpg" alt="meditation-app" width="360">
+                            <img src="./images/meditation-app.jpg"
+                                srcset="./images/meditation-app.jpg x1, ./images/meditation-app.jpg x2"
+                                alt="meditation-app" width="360">
                             <p class="portfolio-list-paragraph">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -363,7 +369,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-list-image">
-                            <img src="./images/taxi-service.jpg" alt="taxi-service" width="360">
+                            <img src="./images/taxi-service.jpg"
+                                srcset="./images/taxi-service.jpg x1, ./images/taxi-service.jpg x2" alt="taxi-service"
+                                width="360">
                             <p class="portfolio-list-paragraph">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -374,7 +382,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-list-image">
-                            <img src="./images/screen-illustrations.jpg" alt="screen-illustrations" width="360">
+                            <img src="./images/screen-illustrations.jpg"
+                                srcset="./images/screen-illustrations.jpg x1, ./images/screen-illustrations.jpg x2"
+                                alt="screen-illustrations" width="360">
                             <p class="portfolio-list-paragraph">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -385,7 +395,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-list-image">
-                            <img src="./images/online-courses.jpg" alt="online-courses" width="360">
+                            <img src="./images/online-courses.jpg"
+                                srcset="./images/online-courses.jpg x1, ./images/online-courses.jpg x2"
+                                alt="online-courses" width="360">
                             <p class="portfolio-list-paragraph">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
